DevOps/yaml模板/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: say-hello-service
  namespace: development
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: say-hello-dev
  type: ClusterIP
